<resources>
    <string name="app_name">ProiectDAM</string>
    <string name="first_activity_use_without_log_in_button">Use without log in</string>
    <string name="first_activity_log_in_button">Log in</string>
    <string name="register_activity_tv_register">Register</string>
    <string name="register_activity_tiet_first_name">First Name</string>
    <string name="register_activity_tiet_full_name">Full Name</string>
    <string name="register_activity_tiet_phone_number">Phone Number</string>
    <string name="register_activity_tiet_email">Email</string>
    <string name="register_activity_tiet_password">Password</string>
    <string name="register_activity_tiet_confirm_password">Confirm Password</string>
    <string name="register_activity_btn_register">Register</string>
    <string name="register_activity_login_message">Already started the journey? Login here.</string>
    <string name="login_activity_tiet_email">Email</string>
    <string name="login_activity_tiet_password">Password</string>
    <string name="login_activity_btn_login">Log in</string>
    <string name="login_activity_register_message">Don\'t have an account? Register now.</string>
    <string name="login_activity_tv_login">Login</string>
    <string name="video_sign_in_layout_info_btn">Get more information</string>
    <string name="add_invalid_email_error">Your email is invalid.</string>
    <string name="add_invalid_password_error">Your password should contain at least 8 characters.</string>
    <string name="register_activity_user_created_message">User successfully created.</string>
    <string name="register_activity_user_created_error_message">Error occured at creating the user profile.</string>
    <string name="map_key" translatable="false">AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>
    <string name="select_a_country">Select a country</string>
    <string name="rating_activity_btn_1_submit">Submit</string>
    <string name="rating_activity_tiet_rating">Write review</string>
    <string name="rating_activity_send_us_feedback">Send us feedback</string>
    <string name="rating_activity_rate_us">Rate us</string>
    <string name="write_your_feedback_here">Write your feedback here</string>
    <string name="login_activity_succesfull_logged_in">Logged in successfully.</string>
    <string name="login_activity_user_not_existing_error_message">User doesn\'t exist. Try to register first.</string>
    <string name="profile_user">Welcome, %1$s!</string>
    <string name="very_bad"> VERY BAD %1$.2f! /5 </string>
    <string name="bad">BAD %1$.2f! /5 </string>
    <string name="ok">OK %1$.2f! /5 </string>
    <string name="good">Good %1$.2f! /5</string>
    <string name="very_good">VERY GOOD %1$.2f!/5 </string>
    <string name="waiting_activity_tv_waiting">Waiting...</string>
    <string name="search_countries">Search...</string>
    <string name="paris_activity_tv_informatii">#1 City of Intellectuals. \n \n #2 The Louvre is the world\'s biggest art museum. \n \n #3 The Eiffel Tower is not the most visited monument in Paris. \n \n #4 Second busiest underground network in Europe. \n \n  #5 There are more dogs in Paris than children. \n \n #6 French came up with the military “dress code”.</string>
    <string name="favorite_fragment_delete_title">Delete a favourite country.</string>
    <string name="favourite_fragment_delete_question">Are you sure you want to delete the country?</string>
    <string name="favorite_fragment_no_delete_message">You didn\'t delete any favorite country.</string>
    <string name="fav_fragment_no">NO</string>
    <string name="fav_fragment_yes">YES</string>
    <string name="roma_activity_tv_info">* Modern Rome has 280 fountains and more than 900 churches. \n \n * Nearly 700,000 euros worth of coins are tossed into Rome\'s Trevi Fountain each year. \n \n * The Romans had built a road network of 53,000 miles by the early fourth century. \n \n * In Ancient Rome, only free-born men were allowed to wear togas, a sign of Roman citizenship.</string>
    <string name="roma_activity_city_name">Roma</string>
    <string name="roma_activity_content_description_roma">Roma</string>
    <string name="budapest_activity_cont_description_budapest">Budapest</string>
    <string name="budapest_activity_tv_info">* Budapest Was Founded by The 3 Cities. \n \n * Budapest is The Thermal Bath Capital of The World. \n \n * Budapest Has The Largest Synagogue in Europe. \n \n * Hungarian Names Are Regulated by The Law. \n \n * Budapest Has The Oldest Underground in Continental Europe.</string>
    <string name="budapest_activity_city_name">Budapest</string>
    <string name="praga_activity_city_name">Praga</string>
    <string name="praga_actiivity_tv_info">* It’s home to the largest castle in the world. Dating back to the ninth century, Prague Castle spans an impressive 18 acres and is home to stunning cathedrals, chapels, royal palaces and gorgeous ornamental gardens. \n \n * Unsurprisingly to many, the locals drink ore beer per capita than any other nation in the world. \n\n * Charles Square was once the largest town square in the whole of medieval Europe. What’s even more impressive is that it is still one of the largest in the world.</string>
    <string name="praga_activ_description_cont_praga">Praga</string>
    <string name="toolbarmenu_fav_item">Favorites</string>
    <string name="toolbarmenu_top_tari_item">Top countries</string>
    <string name="search_bar_item_search">Search</string>
    <string name="bm_home_item">Home</string>
    <string name="bm_explore_item">Explore</string>
    <string name="bm_fav_item">Favorite</string>
    <string name="bm_about_item">About</string>
    <string name="bm_profile_item">Profile</string>
    <string name="top_tara_custom_img_place">top_tara_custom_img_place</string>
    <string name="top_tari_tv_nume_tara">Nume tara</string>
    <string name="top_tari_capitala">Nume capitala</string>
    <string name="top_tari_tv_moneda">Moneda</string>
    <string name="const_descrp_money">Money</string>
    <string name="top_tari_limba">Limba</string>
    <string name="splash_Activ_img">splash</string>
    <string name="splash_2">Splash 2</string>
    <string name="splash3">splash3</string>
    <string name="splash4">splash4</string>
    <string name="logo_splash_activ">logo_splash_activ</string>
    <string name="search_c_listv_item_tv_capital">TextView</string>
    <string name="search_c_listv_item_tv_country">TextView</string>
    <string name="img_search_country_item_lv">img_search_country_item_lv</string>
    <string name="profile_fragment_tv_log_out">Log out</string>
    <string name="profile_fragment_tv_send_feedback">Send us feedback</string>
    <string name="profile_fragment_tv_rate_app">Rate our app</string>
    <string name="profile_fragment_tv_edit_profile">Edit profile</string>
    <string name="profile_fragment_tv_my_profile">My Profile</string>
    <string name="home_fragment_btn_london">London</string>
    <string name="home_fragment_btn_oslo">Oslo</string>
    <string name="home_fragment_btn_munchen">Munchen</string>
    <string name="home_fragment_btn_bucharest">Bucharest</string>
    <string name="home_fragment_ny">New York</string>
    <string name="home_fragment_btn_tokyo">Tokyo</string>
    <string name="home_fragment_btn_praga">Praga</string>
    <string name="home_fragment_btn_budapest">Budapest</string>
    <string name="home_fragment_btn_roma">Roma</string>
    <string name="home_fragment_btn_paris">Paris</string>
    <string name="home_fragment_tv_most_pop">Most popular</string>
    <string name="home_fragment_btn_select_country">Select a country</string>
    <string name="fav_country_tv_limba">Limba</string>
    <string name="fav_country_tv_moneda">Moneda</string>
    <string name="fav_country_tv_capitala">Nume capitala</string>
    <string name="fav_country_tv_tara">Nume tara</string>
    <string name="search_country_detail_tv_language">Official language</string>
    <string name="earch_countries_detail_activity_currency">Currency</string>
    <string name="earch_countries_detail_activity_tourists">Number of tourists per year</string>
    <string name="earch_countries_detail_activity_image_cap_name">Capital name</string>
    <string name="earch_countries_detail_activity_density">Density of population in capital</string>
    <string name="earch_countries_detail_activity_atractions">Tourists attraction</string>
    <string name="register_activity_checkbox_agreed">I agree with terms an conditions.</string>
    <string name="no_result_activity_home_tv">No result</string>
    <string name="feedback_activity__tv_improve_question">What can be improved?</string>
    <string name="add_review">Add Review</string>
    <string name="what_can_be_improved">What can be improved?</string>
    <string name="write_your_feedback_heree">Write your feedback here</string>
    <string name="would_you_recommend_us">Would_you_recommend_us</string>
    <string name="would_you_recommend_uss">Would you recommend us</string>
    <string name="invalid_tiet_feedback">Please include at least 10 characters</string>
    <string name="ty_feedback">Thank you for feedback </string>
    <string name="fragment_profile_reviews">Reviews</string>
    <string name="error_email_invalid">Your email is invalid.</string>
    <string name="error_register_first">You don\'t have an account.Try to register first</string>
    <string name="invalid_password">Password should contain at least 8 characters.</string>
    <string name="invalid_email">Your email is invalid.</string>
    <string name="invalid_name">You should enter a valid name.</string>
    <string name="invalid_phone_number">Your phone number should contain 10 digits.</string>
    <string name="password_dont_match">Your passwords doesn\'t match.</string>
    <string name="waiting_data">Asteptam datele</string>
    <string name="sucess_insert">Inserare realizata cu succes</string>
    <string name="already_favorite">Tara este deja salvata la favorite!</string>
    <string name="over_30_countries">Over 30 countries</string>
    <string name="languages_available">5 Languages Available</string>
    <string name="suggested_attractions">\"Lots of suggested tourist attractions \"</string>
    <string name="searh_countries_activity_country_flag">countryFlag</string>
    <string name="seach_coutries_activity_country_Name">countryName</string>
    <string-array name="ItemsSpinner">
        <item>Interface</item>
        <item>Informations</item>
        <item>Functionality</item>
    </string-array>
</resources>