<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/bm_home_item"
        />

    <item
        android:id="@+id/explore"
        android:icon="@drawable/ic_baseline_public_24"
        android:title="@string/bm_explore_item"
        />

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/bm_fav_item"
        />

    <item
        android:id="@+id/about"
        android:title="@string/bm_about_item"
        android:icon="@drawable/ic_baseline_contact_support_24"
        />
    <item
        android:id="@+id/profile"
        android:title="@string/bm_profile_item"
        android:icon="@drawable/ic_baseline_person_24"
        />


</menu>