<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/splash1"
        android:layout_width="200dp"
        android:layout_height="150dp"

        android:visibility="gone"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/splash_Activ_img"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/splash2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_splash1" />

    <ImageView
        android:id="@+id/splash2"
        android:layout_width="211dp"
        android:layout_height="150dp"
        android:layout_marginTop="90dp"
        android:visibility="gone"
        android:contentDescription="@string/splash_2"
        android:scaleType="fitXY"

        app:layout_constraintBottom_toTopOf="@+id/splash4"
        app:layout_constraintStart_toEndOf="@id/splash1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_splash2" />

    <ImageView
        android:id="@+id/splash3"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:visibility="gone"
        android:contentDescription="@string/splash3"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash1"
        app:srcCompat="@drawable/img_splash3" />

    <ImageView
        android:id="@+id/splash4"
        android:layout_width="211dp"
        android:layout_height="150dp"
        android:contentDescription="@string/splash4"
        android:scaleType="fitXY"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/splash3"
        app:layout_constraintTop_toBottomOf="@+id/splash2"
        app:srcCompat="@drawable/img_splash4" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/logo_splash_activ"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash3"
        app:layout_constraintBottom_toTopOf="@id/progressBar"
        app:srcCompat="@drawable/logo" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>