<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="2">


    <ImageView
        android:id="@+id/search_countries_listview_item_image_v"
        android:layout_width="200dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/android"
        android:padding ="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/img_search_country_item_lv"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/search_countries_listview_item_tv_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search_c_listv_item_tv_country"
        android:textColor="#570b83"
        android:textAlignment="textStart"
        android:paddingTop="62dp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        android:gravity="start" />

        <TextView
            android:id="@+id/search_countries_listview_item_tv_capital"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_countries_listview_item_tv_country"
            android:text="@string/search_c_listv_item_tv_capital"
            android:textColor="#570b83"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:gravity="start" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>