<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5d6ff"
    tools:context=".most_popular.ParisActivity">

    <ImageView
        android:id="@+id/praga_activity_image"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/praga_activity_tv_inf"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:src="@drawable/praga2"
        android:contentDescription="@string/praga_activ_description_cont_praga"/>

    <TextView
        android:id="@+id/praga_activity_tv_inf"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/praga_actiivity_tv_info"
        android:textColor="#570b83"
        android:fontFamily="sans-serif-light"
        android:maxLines="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/praga_activity_image"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="65dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <TextView
        android:id="@+id/praga_activity_tv_nume_oras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/praga_activity_city_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/praga_activity_image"
        app:layout_constraintBottom_toTopOf="@id/praga_activity_tv_inf"
        android:textSize="32sp"
        android:textColor="#570b83"/>


</androidx.constraintlayout.widget.ConstraintLayout>